--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mediaxpost/aescrypt-helper",
-  "version": "1.1.1",
-  "description": "Simple tools to deal with the AES-256 encryption and decryption of data with arbitrary lengths",
+  "name": "@outofsync/aescrypt-helper",
+  "version": "2.0.0",
+  "description": "Simple tools to deal with the AES-256-CBC encryption and decryption of data with arbitrary lengths",
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha",
@@ -13,33 +13,35 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://chronosis@github.com/MediaXPost/aescrypt-helper.git"
+    "url": "git+https://github.com/OutOfSyncStudios/aescrypt-helper.git"
   },
   "keywords": [
-    "lodash",
-    "extension",
+    "aes",
+    "crypt",
+    "aes-256",
+    "aes-256-cbc",
     "utility"
   ],
   "author": "Jay Reardon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MediaXPost/aescrypt-helper/issues"
+    "url": "https://github.com/OutOfSyncStudios/aescrypt-helper/issues"
   },
-  "homepage": "https://github.com/MediaXPost/aescrypt-helper#readme",
+  "homepage": "https://github.com/OutOfSyncStudios/aescrypt-helper#readme",
   "dependencies": {
-    "@mediaxpost/lodashext": "^1.2.1",
+    "@outofsync/lodash-ex": "^1.3.2",
     "buffer-split": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "codacy-coverage": "^3.4.0",
-    "eslint": "^5.12.0",
-    "gulp": "^4.0.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-mocha": "^6.0.0",
-    "gulp-prettier": "^2.0.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "prettier": "^1.15.3"
+    "eslint": "^6.2.2",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-mocha": "^7.0.1",
+    "gulp-prettier": "^2.1.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2"
   }
 }
